# demo-backend

./: .dockerignore  .editorconfig  .env.template  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  Unistroy.xlsx  app.py  docker-compose.demo.yml  docker-compose.yml  feature_extraction.py  fly.dev.toml  fly.master.toml  fly.mock.toml  fly.toml  logs-viewer-users.yml  main.py  mkdocs.Dockerfile  mkdocs.yml  mssql.Dockerfile  noms.py  output.xlsx  par_job.py  project-structure.md  pyproject.toml  reg_q.ipynb  requirements.txt  save_excel.py  set_fly_secrets.sh  start.sh  test.py  test_results_2025-01-30_17-23-23.xlsx  test_results_2025-01-30_17-40-19.xlsx  test_results_2025-01-30_23-27-00.xlsx  test_results_2025-01-30_23-51-18.xlsx  test_results_2025-01-31_00-54-13.xlsx  test_results_2025-01-31_01-32-56.xlsx  test_results_2025-02-01_01-44-04.xlsx
.github/workflows/: check_code.yml  deploy.yml  docker-build.yml  prod_label.yml
.swm/: .ji7e8roa.sw.md  swimm.json  tests-synchronizing-nomenclatures.fczmnwiz.sw.md
controller/: status_controller.py
data/: levelgroup-group-views.xlsx  vectorizer_141223.pkl
data/Dog_2301-2023_BI 3D ispr (prava).pdf/: index.faiss  index.pkl
data/Dog_23012023_BI_3D_ispr_prava.pdf/: index.pkl
data/Dogovor_hozjaistvennyi_schet_razovyi.pdf/: index.faiss  index.pkl
data/Dogovory_GPH_i_dogovornaja_dokumentatsija.pdf/: index.faiss  index.pkl
data/Instruktsija Teams.pdf/: index.faiss  index.pkl
data/Instruktsija_Teams.pdf/: index.faiss  index.pkl
data/Instruktsija_Vydacha_poruchenii_V1_02.11.2021.pdf/: index.faiss  index.pkl
data/Instruktsija_po_izmeneniju_failov_dlja_udalennogo_podkljuchenija.pdf/: index.faiss  index.pkl
data/Instruktsija_po_podkljucheniju_k_seti_Kompanii_po_VPN_s_OS_Windows.pdf/: index.faiss  index.pkl
data/Instruktsija_po_smene_parolja_AO_MSU_1.pdf/: index.faiss  index.pkl
data/Instruktsija_po_smene_parolja_polzovatelja_cherez_OWA.pdf/: index.faiss  index.pkl
data/Instruktsija_po_smene_parolja_polzovatelja_cherez_WebAccess_4.pdf/: index.faiss  index.pkl
docs/: api_reference.md  authorization.md  auto_tests.md  db_assistant.md  db_diagram.md  index.md  nomenclatures_mapper.md  order_emergency_classifier.md  upd_nomenclatures_mapper.md  utd_nomenclatures_mapper.md  wiki_assistant.md
experiments/: README.md
independent_scripts/: convert_users_from_xslx_to_json_config.py
langchain-with-pydantic-v2/: install.sh  install_mac.sh
model/: status_model.py
ner/: app.py  model.py  pyproject.toml
parsing/: download_pdf.py  parsing.py
src/: alembic.ini  app.py  kafka.py  orders_tasks_tracking.py
tests/: api_service.py  api_service_kb.py  google_sheets_service.py  google_sheets_service_kb.py  knowledge_base_test.py  mapping_test.py  nomenclatures_group_view_tests.py  order_classification_test.py  order_classification_test_v2.py  result_mapper.py  run_knowledge_base_sheets_tests.py  run_nomenclature_sheets_tests.py  synchronize_embeddings_model.test.py  synchronize_nomenclatures_model.test.py  test_chroma_build_where_metadatas.py  test_chroma_patch_for_noms_sync.py  test_nomenclature_mapping_model.py  test_nomenclatures_synchronization.py  test_synchronize_nomenclatures_model.py  test_synchronize_nomenclatures_model_2.py  vectorstore_build_where_metadatas_test.py
tmp/: .gitignore  Dockerfile  NEW_DATASET_UNISTOI.xlsx  docker-compose.yml  ds.py  feature_extraction.py  mkdocs.yml  output.xlsx  output_file.txt  p.py  preview.py  save_excel.py  syntetics_armatyres.txt  syntetics_door.txt  test_reg_parsing_feature.xlsx  wwrf.py
upd/: manager.py  parsing_upd.py  upd.py
(+573 files in other folders)
