[tool.poetry]
name = "msu-backend"
version = "0.1.0"
description = ""
authors = ["Dmitry Bleschunov <bleshunov5b@yandex.ru>"]
readme = "README.md"
packages = [{include = "msu_backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.101.0,<0.102.0"
uvicorn = ">=0.23.2,<0.24.0"
pydantic = "^2"
pandas = ">=2.0.3,<2.1.0"
pyodbc = "==4.0.34"
psycopg2-binary = ">=2.9.7,<2.10.0"
openai = ">=0.27.8,<0.28.0"
tiktoken = ">=0.4.0,<0.5.0"
tabulate = ">=0.9.0,<0.10.0"
starlette = ">=0.27.0,<0.28.0"
supabase = "^1.0.4"
python-dotenv = "^1.0.0"
postgrest = "0.10.8"
fastapi-versioning = "^0.10.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}
faiss-cpu = "^1.7.4"
pypdf = "^3.16.3"
transliterate = "^1.10.2"
llama-index = "^0.8.45.post1"
chromadb = "^0.4.14"
websockets = ">=10.3,<11.0"
redis = "^5.0.1"
rq = "^1.15.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
