[tool.poetry]
name = "msu-backend"
version = "0.1.0"
description = ""
authors = ["Dmitry Bleschunov <bleshunov5b@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.101.0,<0.102.0"
uvicorn = ">=0.23.2,<0.24.0"
pydantic = ">=1.9.0,<2.0.0"
pandas = ">=2.0.3,<2.1.0"
psycopg2-binary = ">=2.9.7,<2.10.0"
openai = ">=0.27.8,<0.28.0"
tiktoken = ">=0.4.0,<0.5.0"
starlette = ">=0.27.0,<0.28.0"
python-dotenv = "^1.0.0"
fastapi-versioning = "^0.10.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
faiss-cpu = "^1.7.4"
pypdf = "^3.16.3"
chromadb = "^0.4.14"
websockets = ">=10.3,<11.0"
redis = "^5.0.1"
rq = "^1.15.1"
sqlmodel = "^0.0.12"
passlib = "^1.7.4"
alembic = "^1.13.1"
langchain = "^0.1.1"
langchain-community = "^0.0.13"
tabulate = "^0.9.0"
joblib = "^1.3.2"
fastembed = "^0.2.2"
scikit-learn = "^1.4.0"
sshtunnel = "^0.4.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
