[tool.poetry]
name = "demo-backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.101.0,<0.102.0"
uvicorn = ">=0.23.2,<0.24.0"
pydantic = ">=1.9.0,<2.0.0"
pandas = ">=2.0.3,<2.1.0"
psycopg2-binary = ">=2.9.7,<2.10.0"
openai = ">=0.27.8,<=1.24.0"
tiktoken = ">=0.4.0,<=0.5.2"
starlette = ">=0.27.0,<0.28.0"
python-dotenv = "^1.0.0"
fastapi-versioning = "^0.10.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
faiss-cpu = "^1.7.4"
pypdf = "^3.16.3"
chromadb = "^0.4.14"
websockets = ">=10.3,<11.0"
redis = "^5.0.1"
rq = "^1.15.1"
sqlmodel = "^0.0.12"
passlib = "^1.7.4"
alembic = "^1.13.1"
langchain = "^0.1.1"
langchain-community = "^0.0.37"
joblib = "^1.3.2"
fastembed = "^0.2.2"
pytest = "^8.1.1"
pytest-dotenv = "^0.5.2"
mkdocs-material = "^9.5.15"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
httpx = "^0.27.0"
pdfplumber = "^0.11.0"
onnxruntime = "^1.17.3"
protobuf = "==3.20.*"
langchain-openai = "^0.1.6"
yake = "^0.4.8"
snowballstemmer = "^2.2.0"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
openpyxl = "^3.1.4"
loguru = "^0.7.2"
catboost = "^1.2.7"
xgboost = "^2.1.1"
scikit-learn = "^1.5.2"
faststream = {extras = ["cli", "kafka"], version = "^0.5.33"}
watchfiles = "^1.0.3"
pulsar-client = "3.6.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "src"
